<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <!-- IDs que EXISTEN en nav_graph_menu -->
        <item
            android:id="@+id/nav_perfil"
            android:title="@string/menu_profile"
            android:icon="@android:drawable/ic_menu_myplaces"/>

        <item
            android:id="@+id/nav_inmuebles"
            android:title="@string/menu_inmuebles"
            android:icon="@android:drawable/ic_menu_compass"/>

        <!-- Acciones (no son destinos del grafo) -->
        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login"
            android:icon="@android:drawable/ic_menu_send"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"
            android:icon="@android:drawable/ic_lock_power_off"/>

    </group>
</menu>
